compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "  1 - 1.0"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 13..20, state: Value(Real(0.0)) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Real(0.0)

