compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 * 1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..18, state: Value(Real(1.0)) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Real(1.0)

