compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-8.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "  1 * 1.0"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 13..20 }, state: Value(Real(1.0)) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(4))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Real(1.0)


