compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__restrict_assign_type-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a : boolean := 1.0"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 21..24, state: Error(ConstError { kind: WrongResultType(Real(1.0), Boolean), span: 21..24 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongResultType(Real(1.0), Boolean), span: 21..24 }

error at 21..24: wrong type for compile-time expression
| note for 21..24: expected boolean value, found real value

