compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__restrict_assign_type-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a : int := false"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 17..22, state: Error(WrongType) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(WrongType, 17..22)

error at 17..22: wrong type for compile-time expression

